--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,19 @@
+@import "node_modules/material-design-lite/src/material-design-lite.scss";
 
 body {
 	font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
 	font-size: 100%;
+}
+
+
+.demo-card-wide.mdl-card {
+	width: 512px;
+}
+.demo-card-wide > .mdl-card__title {
+	color: #fff;
+	height: 176px;
+	background: url('../assets/demos/welcome_card.jpg') center / cover;
+}
+.demo-card-wide > .mdl-card__menu {
+	color: #fff;
 }
