--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,4 +1,12 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
 	font-size: 100%;
+	background-color: $color-background;
+	width: 320px;
+
+	padding: 20px;
 }
